More CSS changes, adding colors

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     font-family: 'Courier New', Courier, monospace;
     line-height: 1.6;
     color: #333;
+    background:  linear-gradient(to right, #7c917c, #ffffff) 
 }
 
 h1{
@@ -9,6 +10,7 @@ h1{
     font-size: 2em;
     margin-bottom: 0.5em;
     text-align: center;
+    background-color: gray;
     
 }
 
@@ -19,6 +21,10 @@ ul{
 ol{
     list-style-type: decimal;
     margin-left: 20px;
+}
+
+li{
+    background-color: grey;
 }
 
 img{
